--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,1 @@
-node_modules
-SDC Application Data - Atlier Project (_Clean_ Data Set)
-SDC Application Data - Atlier Project (_Clean_ Data Set)
-SDC Application Data - Atlier Project (_Clean_ Data Set)
-SDC Application Data - Atlier Project (_Clean_ Data Set)
-features.csv
-photos.csv
-product.csv
-skus.csv
-styles.csv
-testFeatures.csv
-testPhotos.csv
-testProduct.csv
-testSkus.csv
+/node_modules
