--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "mongoose": "^6.6.2"
