--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
-    "mongoose": "^6.6.2"
+    "mongoose": "^6.6.2",
+    "redis": "^4.5.0"
   }
 }
